# scriptscore

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DCO.txt  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md  rundev  rundev.cmd  sonar-project.properties
.github/: pull_request_template.md
cli/: README.md  pyproject.toml
cli/scripts/: install_paddle_models.ps1  install_paddle_models.sh
cli/src/scriptscore/: __init__.py  __main__.py  cli.py  engine.py  paths.py
cli/src/scriptscore/artifacts/: __init__.py  files.py  images.py  manifest.py  pdfs.py  traces.py
cli/src/scriptscore/commands/: __init__.py  common.py  exam.py  exam_analyze.py  exam_generate_rubric.py  exam_setup.py  exam_shared.py  grading_draft_feedback.py  grading_export.py  grading_markup.py  grading_run_consistency.py  grading_score_preliminary.py  grading_shared.py  llm.py  runtime_list_llm_models.py  runtime_validate_llm_model.py  scans.py  scans_align_auto.py  scans_canonicalize.py  scans_crop.py  scans_detect.py  scans_ingest.py  scans_ocr.py  scans_parse.py  scans_pdf_aruco.py  scans_pdf_create_redacted.py  scans_pdf_transient.py  scans_pii.py  scans_shared.py  scans_transform.py  smoke.py
cli/src/scriptscore/contracts/: __init__.py  common.py  envelopes.py  errors.py  exam.py  grading.py  scans.py  traces.py
cli/src/scriptscore/ocr/: __init__.py  easyocr.py  paddle.py
cli/src/scriptscore/pii_scan/: __init__.py  engine.py  images.py  matching.py  reader.py  types.py
cli/src/scriptscore/prompts/: __init__.py  builtin.py  builtin_prompts.yaml  execute.py  loader.py  render.py  response.py
cli/src/scriptscore/providers/: __init__.py  aruco.py  constants.py  core_template_match.py  fake.py  interfaces.py  ollama.py  registry.py
cli/src/scriptscore/runtime/: __init__.py  context.py  registry.py  runner.py
cli/src/scriptscore/transport/: __init__.py  desktop_worker.py  sidecar.py
cli/tests/: __init__.py  test_artifacts_images.py  test_cli_unit.py  test_command_compat_exports.py  test_context.py  test_contracts.py  test_desktop_launchers.py  test_desktop_legal_artifacts.py  test_desktop_worker.py  test_desktop_worker_unit.py  test_direct_cli.py  test_easyocr.py  test_engine.py  test_exam_commands.py  test_fake_provider.py  test_grading_commands.py  test_ollama_provider.py  test_paddle_ocr.py  test_parity.py  test_paths.py  test_pii_scan_helpers.py  test_prompt_render.py  test_prompt_response.py  test_prompts.py  test_provider_registry.py  test_runner.py  test_runtime_commands.py  test_scans_align_auto.py  test_scans_commands.py  test_scans_detect.py  test_scans_ocr.py  test_scans_pdf_create_redacted.py  test_scans_pdf_transient.py  test_scans_pii.py  test_sidecar.py  test_sidecar_unit.py  test_trace_artifacts.py  test_transport_exports.py
cli/tests/support/: __init__.py  check_coverage_thresholds.py  images.py  llm.py  parity.py  pdfs.py  process.py  wheel_smoke.py
desktop/: README.md
desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  README.md  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: binding_token.rs  commands.rs  errors.rs  lib.rs  main.rs  models.rs  path_utils.rs  project_store.rs  protocol.rs  release_smoke.rs  secrets.rs  test_support.rs  updates.rs  worker.rs  worker_runtime.rs  workflow_status.rs
desktop/src-tauri/src/lms/: canvas.rs  mod.rs
desktop/src-tauri/src/project_store/: edits.rs  host_workflows.rs  jobs.rs  project_config.rs  projects.rs  schema.rs  student_roster.rs  template_setup.rs  trace_index.rs  workflow_state.rs  workspace.rs
desktop/src-tauri/src/state/: app_jobs.rs  host_workflow.rs  job_history.rs  lms_binding.rs  lms_roster_cache.rs  mod.rs  moderation.rs  project_lifecycle.rs  results_export.rs  results_lms.rs  results_lms_report.rs  runtime.rs  runtime_dispatch.rs  runtime_execution.rs  runtime_messages.rs  scheduler.rs  settings.rs  student_submission_delete.rs  student_workflow.rs  student_workflow_pipeline.rs  student_workflow_pipeline_tests.rs  student_workflow_results.rs  student_workflow_shared.rs  student_workflow_tests.rs  template_export.rs  template_setup.rs  transient_commands.rs  workspace_actions.rs  workspace_actions_analysis.rs  workspace_actions_intake.rs  workspace_actions_rubrics.rs  workspace_actions_shared.rs
desktop/src-tauri/tests/: state_integration.rs
docs/: building-from-source.md  (+5 more)
(+233 files in other folders)
