[package]
name = "scriptscore-desktop-host"
version = "0.1.0-rc.2"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "scriptscore_desktop_host"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.clippy]
undocumented_unsafe_blocks = "deny"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
url = "2"
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "2"
uuid = { version = "1.23.0", features = ["v4"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }
rand = "0.8"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
zip = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
